--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,59 @@
-# Compiled class file
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+*.iml
+
+# Windows exe files
+*.exe
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
+
+## File-based project format:
+*.iws
 *.class
 
-# Log file
-*.log
+## Plugin-specific files:
 
-# BlueJ files
-*.ctxt
+# IntelliJ:
+/out/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+## Directory-based project format:
+.idea/
+.allure/
+target/
+test-output/
+build/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Ignore Mac DS_Store files
+.DS_Store
+
+# Test suite
+myTests.xml
