changes to config.properties file

--- a/src/main/resources/andrewconfig.properties
+++ b/src/main/resources/andrewconfig.properties
@@ -1,5 +1,5 @@
-url_google_homepage=https://google.com.ua/
-search_request=moyo
-mention_in_search_results=moyo.ua
-url_moyo_homepage=https://www.moyo.ua/ua/
-expected_result=msi
+url.google.homepage=https://google.com.ua/
+search.request=moyo
+mention.in.search.results=moyo.ua
+url.moyo.homepage=https://www.moyo.ua/ua/
+expected.result=msi
