added javascript executer/new tests/ improvements to tests and pom

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -3,3 +3,5 @@ search.request=moyo
 mention.in.search.results=moyo.ua
 url.moyo.homepage=https://www.moyo.ua/ua/
 expected.result=msi
+expected.results.count=24
+expected.show.all.results.count=281
