Add changes after review

--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,16 @@
         <testng.version>7.5</testng.version>
         <selenium.java.version>3.141.59</selenium.java.version>
         <webdrivermanager.version>5.0.3</webdrivermanager.version>
+        <lombok.version>1.18.24</lombok.version>
 
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -43,6 +44,13 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
