--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>selenide</artifactId>
             <version>6.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.4.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
