--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <testng.version>7.5</testng.version>
-        <selenium.java.version>3.141.59</selenium.java.version>
+        <selenium-java.version>4.1.4</selenium-java.version>
         <selenide.version>6.4.0</selenide.version>
         <webdrivermanager.version>5.0.3</webdrivermanager.version>
         <assertj-core.version>3.22.0</assertj-core.version>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>${selenium.java.version}</version>
+            <version>${selenium-java.version}</version>
         </dependency>
 
         <dependency>
@@ -44,14 +44,6 @@
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>${webdrivermanager.version}</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
