--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,13 @@
         <maven.compiler.target>11</maven.compiler.target>
         <testng.version>7.5</testng.version>
         <selenium.java.version>4.1.4</selenium.java.version>
+        <selenide.version>6.4.0</selenide.version>
         <webdriver.manager.version>5.1.1</webdriver.manager.version>
         <typesafe.version>1.4.2</typesafe.version>
         <aspectj.version>1.9.6</aspectj.version>
         <allure-testng-version>2.13.9</allure-testng-version>
         <maven.surefire.plugin>2.20</maven.surefire.plugin>
+        <assertj.version>3.22.0</assertj.version>
     </properties>
 
     <dependencies>
@@ -26,6 +28,11 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure-testng-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -49,6 +56,13 @@
             <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -63,11 +77,11 @@
                     </argLine>
                 </configuration>
                 <dependencies>
-                <dependency>
-                    <groupId>org.aspectj</groupId>
-                    <artifactId>aspectjweaver</artifactId>
-                    <version>${aspectj.version}</version>
-                </dependency>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
                 </dependencies>
             </plugin>
         </plugins>
