--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
         <testng.version>7.5</testng.version>
         <selenium.java.version>4.1.3</selenium.java.version>
         <aspectj.version>1.8.10</aspectj.version>
+        <surefire.version>2.20</surefire.version>
+        <selenide.version>6.4.0</selenide.version>
+        <assertj.version>3.4.1</assertj.version>
+        <allure.version>2.17.3</allure.version>
     </properties>
 
     <build>
@@ -21,7 +25,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>${surefire.version}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <allure.results.directory>
@@ -57,18 +61,18 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>6.4.0</version>
+            <version>${selenide.version}</version>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.4.1</version>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.17.3</version>
+            <version>${allure.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
