added verification for date pickers options

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -8,3 +8,15 @@ pages{
   login = "https://dtapi.if.ua/"
   protocol = "https://dtapi.if.ua/admin/protocol"
 }
+dates{
+  startDate{
+    year = "2016"
+    month = "MAR"
+    day = "10"
+  }
+  endDate{
+    year = "2022"
+    month = "MAR"
+    day = "10"
+  }
+}
