--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,22 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <testng.version>7.5</testng.version>
-        <selenium.java.version>3.141.59</selenium.java.version>
+        <selenium-java.version>4.1.4</selenium-java.version>
         <selenide.version>6.4.0</selenide.version>
+        <webdrivermanager.version>5.0.3</webdrivermanager.version>
         <assertj-core.version>3.22.0</assertj-core.version>
-        <webdriver.manager.version>5.1.1</webdriver.manager.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>${selenium.java.version}</version>
+            <version>${selenium-java.version}</version>
         </dependency>
         <dependency>
             <groupId>com.codeborne</groupId>
@@ -30,22 +35,15 @@
             <version>${selenide.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>${webdriver.manager.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
 </project>
