--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <assertj.version>3.4.1</assertj.version>
         <allure.version>2.17.3</allure.version>
         <typesafe.version>1.4.2</typesafe.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 
     <build>
@@ -80,6 +81,12 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>${typesafe.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
