--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -1,22 +1,14 @@
-users{
-  admin{
+users {
+  admin {
     login = "admin"
     password = "dtapi_admin"
   }
 }
-pages{
+pages {
   login = "https://dtapi.if.ua/"
   protocol = "https://dtapi.if.ua/admin/protocol"
 }
-dates{
-  startDate{
-    year = "2016"
-    month = "MAR"
-    day = "10"
-  }
-  endDate{
-    year = "2022"
-    month = "MAR"
-    day = "10"
-  }
+dates {
+  startDate = "2016-05-10"
+  endDate = "2022-03-25"
 }
