added test for student login changed locator for username button search minor changes after review

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -3,7 +3,11 @@ users {
     login = "admin"
     password = "dtapi_admin"
   }
-}
+  student {
+    login = "azhab"
+    password = "1qaz2wsx"
+  }
+ }
 pages {
   login = "https://dtapi.if.ua/"
   protocol = "https://dtapi.if.ua/admin/protocol"
