Faculties page search field tested

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -7,6 +7,8 @@ users {
 pages {
   login = "https://dtapi.if.ua/"
   protocol = "https://dtapi.if.ua/admin/protocol"
+  faculties = "https://dtapi.if.ua/admin/faculties"
+  dashboard = "https://dtapi.if.ua/admin/dashboard"
 }
 dates {
   startDate = "2016-05-10"
