Checked work of search field with valid and invalid data

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -14,3 +14,8 @@ dates {
   startDate = "2016-05-10"
   endDate = "2022-03-25"
 }
+search_input{
+faculty = "Інститут інформаційних технологій"
+description = "факультет справжніх"
+invalid = "#@&$%^"
+}
