added test to check error message when wrong date order

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -16,3 +16,8 @@ dates {
   startDate = "2016-05-10"
   endDate = "2022-03-25"
 }
+messages{
+  error{
+    wrongDateOrder = "Кінцева дата повинна бути більшою за початкову"
+  }
+}
