--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -11,12 +11,15 @@ users {
 pages {
   login = "https://dtapi.if.ua/"
   protocol = "https://dtapi.if.ua/admin/protocol"
-  faculties = "https://dtapi.if.ua/admin/faculties"
-  dashboard = "https://dtapi.if.ua/admin/dashboard"
 }
 dates {
   startDate = "2016-05-10"
   endDate = "2022-03-25"
+}
+messages{
+  error{
+    wrongDateOrder = "Кінцева дата повинна бути більшою за початкову"
+  }
 }
 search_input{
 faculty = "Інститут інформаційних технологій"
