added new page object for Specialities and new test for checking speciality adding feature

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -11,6 +11,7 @@ users {
 pages {
   login = "https://dtapi.if.ua/"
   protocol = "https://dtapi.if.ua/admin/protocol"
+  specialities = "https://dtapi.if.ua/admin/speciality"
 }
 dates {
   startDate = "2016-05-10"
