added verifying changes according to API responses

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -31,4 +31,7 @@ api{
     isLogged = "/login/isLogged"
     logout = "/login/logout"
   }
+  entityPathes{
+    getRecords = "/%s/getRecords"
+  }
 }
