adding student functionality

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -9,6 +9,7 @@ pages {
   protocol = "https://dtapi.if.ua/admin/protocol"
   admins = "https://dtapi.if.ua/admin/admin-user"
   aboutUs = "https://dtapi.if.ua/admin/aboutUs"
+  students = "https://dtapi.if.ua/admin/group/Students"
 }
 dates {
   startDate = "2016-05-10"
@@ -32,4 +33,8 @@ api{
 }
 testData{
   testSubject = "Тестовий предмет"
+}
+studentsData{
+groupName = "АУ-02-1"
+successfulAddingMessage = "Студент доданий, дані збережено"
 }
