Verified that edited timetable is displayed in api requests, added post, update and delete requests in Data Provider

--- a/src/main/resources/data.conf
+++ b/src/main/resources/data.conf
@@ -28,6 +28,9 @@ api{
   }
   entityPathes{
     getRecords = "/%s/getRecords"
+    insertData = "/%s/insertData"
+    update = "/%s/update/%s"
+    delete = "/%s/del/%s"
   }
 }
 testData{
